@@ -2,54 +2,66 @@ package poc_tdb;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.security.Security;
-
-import org.bouncycastle.jce.provider.BouncyCastleProvider;
-
-import com.airmalta.hip.tdbingester.filepojos.DoneFile;
-import com.airmalta.hip.tdbingester.filepojos.DoneFileEntry;
 import java.sql.Timestamp;
 import java.time.Instant;
 
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 
-
-
-
+import com.airmalta.hip.tdbingester.filepojos.DoneFileEntry;
+import com.airmalta.hip.tdbingester.filepojos.DoneFile;
+@Component
 public class Utility {
-	
-	
-	
-	public static ArrayList<String> readFile(File file) {
-		ArrayList<String> list = new ArrayList<String>();
 
+	public static ArrayList<String> readFile(File file) {
+		String destinationPath = "C:\\tdb\\prova\\";
+		ArrayList<String> list = new ArrayList<String>();
+		File newPath = new File(destinationPath +file.getName());
 		try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
 			String line;
 			while ((line = reader.readLine()) != null) {
 				list.add(line);
 
 			}
-			return list; 
+			return list;
 		} catch (IOException e) {
 			e.printStackTrace(); // Stampa eventuali errori
 		}
-		return list;
+		return null;
 
 	}
-	
-	public static ArrayList<DoneFileEntry> createDoneFileEntry(ArrayList<String> lezzo) {
+	public static void moveFile(File originalPath, String destinationPath) throws IOException {
+		File destination = new File(destinationPath + originalPath.getName());
+		Files.move(originalPath.toPath(), destination.toPath(), StandardCopyOption.REPLACE_EXISTING);
+	}
+
+	public static InputStream readGpg(String string) throws FileNotFoundException {
+		BufferedReader br = new BufferedReader(new FileReader(string));
+		return null;
+	}
+
+	public static ArrayList<DoneFileEntry> createDoneFileEntry(ArrayList<String> arrayString) {
 
 		ArrayList<DoneFileEntry> doneFileEntryList = new ArrayList();
-		for (String element : lezzo) {
+		for (String element : arrayString) {
 			if (element.contains("=")) {
 				String[] prova = element.split("=");
 
 				DoneFileEntry donefileentry = new DoneFileEntry(prova[0], Integer.parseInt(prova[1]));
-				doneFileEntryList.add(donefileentry);
+				doneFileEntryList.addLast(donefileentry);
 			}
 
 		}
@@ -60,18 +72,13 @@ public class Utility {
 	public static DoneFile createDoneFile(String fileName, ArrayList<String> readedFile, ArrayList<DoneFileEntry> doneFileEntryList) {
 		DoneFile doneFile = new DoneFile();
 		doneFile.setFileName(fileName);
-		doneFile.setNumberOfBytes(Integer.parseInt(readedFile.get(0)));
-		System.out.println(Integer.parseInt(readedFile.get(0)));
+		doneFile.setNumberOfBytes(Integer.parseInt(readedFile.getFirst()));
+		System.out.println(Integer.parseInt(readedFile.getFirst()));
+		System.out.println(fileName);
 		doneFile.setFileEntries(doneFileEntryList);
 		return doneFile;
 	}
-	
-	public static String addProvider() {
-    	BouncyCastleProvider bcProvider = new BouncyCastleProvider();
-		Security.addProvider(bcProvider);
-		return bcProvider.getName();
-	}
-	
+
 	public static boolean compareFileEntries(ArrayList<DoneFileEntry> dotFiles, HashMap<String, String> doneFileEntries, DoneFile doneFile) throws Exception {
 		int count = 0;
 		int sizeDoneFileEntry = doneFileEntries.size();
@@ -92,7 +99,7 @@ public class Utility {
 		} else {
 			throw new IOException("ERROR - The following files specified in " + doneFile.getFileName() + " have not been found: " + missingEntry);
 			
- 
+
 		}
 		
 	}
@@ -122,5 +129,8 @@ public class Utility {
 	    }
 	    // Se non trovato, puoi restituire un valore predefinito o lanciare un'eccezione
 	    return -1;  // o puoi lanciare un'eccezione come new NoSuchElementException("File not found")
+	}
+	
+	public Utility() {
 	}
 }
